--- a/File2.ipynb
+++ b/File2.ipynb
@@ -143,6 +143,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Construct_Data_Matrix(list1,list2):\n",
+    "    if len(list1) != len(list2):\n",
+    "        print('Lists must be of same length')\n",
+    "        return 0\n",
+    "    \n",
+    "    dataMatrix = []\n",
+    "    for i in range(len(list1)):\n",
+    "        dataMatrix.append([list1[i],list2[i]])\n",
+    "    return  dataMatrix\n",
+    "\n",
+    "\n",
+    "def Construct_Centered_DM(datamatrix,Mean_list):\n",
+    "    centeredDataMatrix = []\n",
+    "    for tups in datamatrix:\n",
+    "        val1 = tups[0] - Mean_list[0]\n",
+    "        val2 = tups[1] - Mean_list[1]\n",
+    "        centeredDataMatrix.append([val1,val2])\n",
+    "    return centeredDataMatrix\n",
+    "\n",
+    "def check_OneD(matrix):\n",
+    "    check1 = type(matrix) == list\n",
+    "    check2 = len(matrix) > 0\n",
+    "    check3 = type(matrix[0]) != list\n",
+    "    return check1 and check2 and check3\n",
+    "    \n",
+    "def Take_Transpose(datamatrix):\n",
+    "    \n",
+    "    # check is datamatrix is 1D\n",
+    "    check_if_1D = check_OneD(datamatrix)\n",
+    "    if check_if_1D == True:\n",
+    "        transposed = []\n",
+    "        for element in datamatrix:\n",
+    "            transposed.append(element)\n",
+    "        return transposed\n",
+    "    \n",
+    "    # else it will only deal with 2x2 matrix\n",
+    "    rows_count = len(datamatrix)\n",
+    "    cols_count = len(datamatrix[0])\n",
+    "    transposed_mat = []\n",
+    "    for i in range(cols_count):\n",
+    "        row = []\n",
+    "        for j in range(rows_count):\n",
+    "            row.append(datamatrix[j][i])\n",
+    "        transposed_mat.append(row) #appending the new constructed row in to the transposed matrix\n",
+    "    return transposed_mat\n",
+    "   \n",
+    "def Check_if_Vector(Mat):\n",
+    "    if type(Mat) != list:\n",
+    "        check1 = False\n",
+    "    \n",
+    "    return 0     \n",
+    "\n",
+    "def Calc_DotProduct(Matrix1, Matrix2):\n",
+    "    if len(Matrix1[0]) != len(Matrix2):\n",
+    "        return \"Matrices cannot be multiplied\"\n",
+    "    else:\n",
+    "        # Initializing a new matrix with zeros which will then hold the result\n",
+    "        rows_Matrix1 = len(Matrix1)\n",
+    "        cols_Matrix2 = len(Matrix2[0])\n",
+    "        dt = [[0 for _ in range(cols_Matrix2)] for _ in range(rows_Matrix1)]\n",
+    "        for i in range(len(Matrix1)):\n",
+    "            # looping through rows of first Matrix\n",
+    "            for j in range(len(Matrix2[0])):\n",
+    "                # looping through cols of Second Matrix\n",
+    "                temp_result = 0\n",
+    "                for t in range(len(Matrix1[0])): \n",
+    "                    temp_result += Matrix1[i][t] * Matrix2[t][j]\n",
+    "                dt[i][j] = temp_result           \n",
+    "    return dt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
