--- a/File2.ipynb
+++ b/File2.ipynb
@@ -220,6 +220,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Covariance Matrix of Centered Data: \n",
+      "[[3.075591189586054, 1.2804725012386828], [1.2804725012386828, 0.5756758704562862]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here\n",
+    "dataMatrix=Construct_Data_Matrix(datalist[0],datalist[1])\n",
+    "# Computing th mean of the columns of datamatrix\n",
+    "dataMat_Col1_mean = 0\n",
+    "dataMat_Col2_mean = 0\n",
+    "temp_col1 , temp_col2 = 0,0\n",
+    "# for tups in dataMatrix:\n",
+    "#     temp_col1 += tups[0]\n",
+    "#     temp_col2 += tups[1]\n",
+    "import numpy as np\n",
+    "\n",
+    "# dataMat_Col1_mean = temp_col1 / len(dataMatrix)\n",
+    "# dataMat_Col2_mean = temp_col2 / len(dataMatrix)\n",
+    "# Petal Length and Width Mean Vector\n",
+    "Mean_list = [pl_mean,pw_mean]\n",
+    "\n",
+    "# Now Centering the data by subtracting the Mean\n",
+    "centeredDataMatrix = Construct_Centered_DM(dataMatrix,Mean_list) \n",
+    "# centeredDataMatrix is Z basically\n",
+    "# n is the length of the centered Matrix\n",
+    "# print(centeredDataMatrix)\n",
+    "n = len(centeredDataMatrix)\n",
+    "# taking transpose\n",
+    "transposed_dataMatrix = Take_Transpose(centeredDataMatrix)\n",
+    "# Now take Dot Product of CenteredDataMAtrix Transpose and MAtrix itself\n",
+    "# print(transposed_dataMatrix )\n",
+    "dot_prod = Calc_DotProduct(transposed_dataMatrix,centeredDataMatrix)\n",
+    "# print(dot_prod)\n",
+    "one_of_n = 1 / n\n",
+    "\n",
+    "# Covariance_Matrix = [[(1/n) * i for i in row] for row in dot_prod]\n",
+    "Covariance_Matrix = []\n",
+    "for row in dot_prod:\n",
+    "    cov_value = [one_of_n * points for points in row]\n",
+    "    Covariance_Matrix.append(cov_value)\n",
+    "    \n",
+    "    \n",
+    "print('Covariance Matrix of Centered Data: ')\n",
+    "print(Covariance_Matrix)\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
