--- a/File2.ipynb
+++ b/File2.ipynb
@@ -278,6 +278,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task3: Multivariate Gaussian\n",
+    "----------------\n",
+    "Let's model $X$ with multivariate Gaussian. Find the probability of having flowers with petal width and height in the following range $P(3.5 < x_1 < 3.7,5.5 < x_2 <5.6)$.\n",
+    "Recall that \n",
+    "$$f_{\\mathbf x}(x_1,\\ldots,x_k) = \\frac{1}{\\sqrt{(2\\pi)^k|\\boldsymbol\\Sigma|}} \\exp\\left(-\\frac{1}{2}({\\mathbf x}-{\\boldsymbol\\mu})^\\mathrm{T}{\\boldsymbol\\Sigma}^{-1}({\\mathbf x}-{\\boldsymbol\\mu}) \\right)$$\n",
+    "\n",
+    "where ${\\mathbf x}$ is a real k-dimensional column vector and $|\\boldsymbol\\Sigma|$ is the determinant of $\\boldsymbol\\Sigma$. For our this case $k=2$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Calc_Variance(List1,list_mean):\n",
+    "    var = 0\n",
+    "    temp = 0\n",
+    "    dif = 0\n",
+    "    squared_dif = 0\n",
+    "    for val in List1:\n",
+    "        dif = val - list_mean\n",
+    "        squared_dif = dif ** 2\n",
+    "        temp += squared_dif\n",
+    "    var = temp / (len(List1)-1)\n",
+    "    return var\n",
+    "def Calc_StandardDeviation(List1,Mean1):\n",
+    "    std = sqr_root(Calc_Variance(List1,Mean1))\n",
+    "    return std\n",
+    "\n",
+    "def sqr_root(value):\n",
+    "    return value ** 0.5\n",
+    "\n",
+    "def zScore(x, mean, std):\n",
+    "    return (x - mean) / std\n",
+    "\n",
+    "# Petal Length Variance and Standard Deviation\n",
+    "pl_var = Calc_Variance(datalist[0],Mean_list[0])\n",
+    "pw_var = Calc_Variance(datalist[1],Mean_list[1])\n",
+    "Petal_var_vector = [pl_var,pw_var]\n",
+    "pl_std = sqr_root(pl_var)\n",
+    "pw_std = sqr_root(pw_var)\n",
+    "Petal_std_vector = [pl_std,pw_std]\n",
+    "\n",
+    "lower_bound_x1 = 3.5\n",
+    "upper_bound_x1 = 3.7\n",
+    "lower_bound_x2 = 5.5\n",
+    "upper_bound_x2 = 5.6\n",
+    "\n",
+    "# z1_lower = zScore(x1_lower,Mean_list[1],pw_std)\n",
+    "# z1_Upper = zScore(x1_upper,Mean_list[1],pw_std)\n",
+    "# z2_lower = zScore(x2_lower,Mean_list[0],pl_std)\n",
+    "# z2_Upper = zScore(x2_upper,Mean_list[0],pl_std)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
