--- a/File2.ipynb
+++ b/File2.ipynb
@@ -339,6 +339,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Find_Determinant(Matrix1):\n",
+    "    if len(Matrix1) != 2:\n",
+    "        print('This function can only compute Determinant of 2x2 Matrix')\n",
+    "        return -1\n",
+    "    det = (Matrix1[0][0] * Matrix1[1][1]) - (Matrix1[0][1] * Matrix1[1][0])\n",
+    "    return det\n",
+    "\n",
+    "def Inverse_Covariance_Matrix(cov_mat):\n",
+    "    Determinant = Find_Determinant(cov_mat)\n",
+    "    if Determinant == 0:\n",
+    "        print(\"The matrix is singular and cannot be inverted.\")\n",
+    "        return -1\n",
+    "    Adjoint_Matrix = [\n",
+    "        [cov_mat[1][1],-(cov_mat[0][1])],\n",
+    "        [-(cov_mat[1][0]),cov_mat[0][0]]\n",
+    "    ]\n",
+    "    \n",
+    "    inverse_of_det = 1 / Determinant \n",
+    "    Inverse_of_Matrix = [\n",
+    "        [inverse_of_det * Adjoint_Matrix[0][0],inverse_of_det * Adjoint_Matrix[0][1] ],\n",
+    "        [inverse_of_det * Adjoint_Matrix[1][0],inverse_of_det * Adjoint_Matrix[1][1] ]\n",
+    "    ]\n",
+    "    return Inverse_of_Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
