--- a/File2.ipynb
+++ b/File2.ipynb
@@ -370,6 +370,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Vector_Mulitply_Matrix(Matrix,Vector):\n",
+    "    # first of all we will make sure that our matrix is of 2x2 and vector is of shape(1,2)\n",
+    "    \n",
+    "    if len(Vector) != 2:\n",
+    "        print('Vector must be of shape (1 row, 2 col)')\n",
+    "        return -1\n",
+    "    \n",
+    "    if len(Matrix) != 2 :\n",
+    "    # :\n",
+    "        print('Matrix should be of 2x2')\n",
+    "        return -1\n",
+    "\n",
+    "    temp_sum, temp_prod = 0,0\n",
+    "    product = []\n",
+    "    for row in Matrix:\n",
+    "        temp_prod = 0\n",
+    "        for j in range(len(Vector)):\n",
+    "            temp_prod += row[j] * Vector[j]\n",
+    "        product.append(temp_prod)\n",
+    "            \n",
+    "    return product\n",
+    "\n",
+    "def DotProd_of_Vector(V1,V2):\n",
+    "    V3 = [0,0]\n",
+    "    # if len(V1) !=2 or len(V2) != 2:\n",
+    "    #     print('Vectors must b of Shape [1 row, 2 Cols]')\n",
+    "    #     return -1\n",
+    "    V3[0] = V1[0][0] * V2[0][0]\n",
+    "    V3[1] = V1[1][0] * V2[0][1]\n",
+    "    result = V3[0] + V3[1]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
