--- a/File2.ipynb
+++ b/File2.ipynb
@@ -409,6 +409,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = 2.71828 \n",
+    "pi = 3.14159\n",
+    "\n",
+    "# def check_OneD(matrix):\n",
+    "#     check1 = type(matrix) == list\n",
+    "#     check2 = len(matrix) > 0\n",
+    "#     check3 = type(matrix[0]) != list\n",
+    "#     return check1 and check2 and check3\n",
+    "\n",
+    "\n",
+    "def Multivariate_Gaussian_PDF(value_x,Mean,covariance_matrix):\n",
+    "    k = 2 #specified in the Question\n",
+    "    # firstly working on the Coefficient of exp which is ( 1 / sqrt( ((2*pi)^k)* Inverse of COVMat )\n",
+    "    Coeff_of_exp = 0\n",
+    "    determinant_of_cov_mat = Find_Determinant(covariance_matrix) # |cov| determinant of covariance matrix\n",
+    "    # print(determinant_of_cov_mat)\n",
+    "    two_into_pi_raised_power_k = (2 * pi)**k  # (2pi)^k\n",
+    "    # print(two_into_pi_raised_power_k)\n",
+    "    temp = determinant_of_cov_mat * two_into_pi_raised_power_k # (2pi)^k * |cov|\n",
+    "    # print(temp)\n",
+    "    sqrRoot = sqr_root(temp) # ((2pi)^k * |cov| )^(1/2)\n",
+    "    # print(sqrRoot)\n",
+    "    Coeff_of_exp = 1 / sqrRoot # (1 /  ((2pi)^k * |cov| )^(1/2))\n",
+    "    # print(Coeff_of_exp)\n",
+    "    # Now working on the Power of exp\n",
+    "    Diff_btw_x_and_mu = [ [x-m] for x,m in zip(value_x,Mean)] # (x - mu)\n",
+    "    # print('(x-mu)',Diff_btw_x_and_mu)\n",
+    "    Transpose_of_Diff_btw_x_and_mu = Take_Transpose(Diff_btw_x_and_mu)  # (x - mu).Transpose\n",
+    "    # print('(x-mu).T',Transpose_of_Diff_btw_x_and_mu)\n",
+    "    inverse_of_cov_mat = Inverse_Covariance_Matrix(covariance_matrix)  # inverse of covariance matrix\n",
+    "    # print('inv cov',inverse_of_cov_mat)\n",
+    "    product1 = Calc_DotProduct(inverse_of_cov_mat,Diff_btw_x_and_mu)\n",
+    "    # print('inv * (x-mu)',product1) #product one is a vector hance we will use vector multiplie vector function\n",
+    "    # product2 = Calc_DotProduct(product1,Transpose_of_Diff_btw_x_and_mu)\n",
+    "    product2 = DotProd_of_Vector(product1,Transpose_of_Diff_btw_x_and_mu)\n",
+    "    # print(product1)\n",
+    "    # print('inv * (x-mu) * (x-mu).T',product2)\n",
+    "    power_of_exp = -0.5 * product2\n",
+    "    # print(power_of_exp)\n",
+    "    pdf_value = Coeff_of_exp * (e ** power_of_exp)\n",
+    "    # print(pdf_value)\n",
+    "    return pdf_value"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
