--- a/File2.ipynb
+++ b/File2.ipynb
@@ -459,6 +459,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PDF value at x=3.5 and x2=5.5:  3.073995955143104e-100\n",
+      "PDF value at x=3.7 and x2=5.6:  5.477579863067956e-101\n",
+      "PDF value at x=3.5 and x2=5.6:  8.68913802905471e-105\n",
+      "PDF value at x=3.7 and x2=5.5:  1.5935707896427265e-96\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Now go and use the function to find the pdf value and compares these newly computed value\n",
+    "#with the earlier value and compute the difference...\n",
+    "# evaluating pdf values for the whole range\n",
+    "mgp_value_at_x1Lower_x2_lower = Multivariate_Gaussian_PDF([lower_bound_x1,lower_bound_x2],Mean_list,Covariance_Matrix)\n",
+    "mgp_value_at_x1upper_x2_upper = Multivariate_Gaussian_PDF([upper_bound_x1,upper_bound_x2],Mean_list,Covariance_Matrix)\n",
+    "mgp_value_at_x1lower_x2_upper = Multivariate_Gaussian_PDF([lower_bound_x1,upper_bound_x2],Mean_list,Covariance_Matrix)\n",
+    "mgp_value_at_x1upper_x2_lower = Multivariate_Gaussian_PDF([upper_bound_x1,lower_bound_x2],Mean_list,Covariance_Matrix)\n",
+    "# mgp_value_at_x1Lower_x2_lower\n",
+    "change_in_xone = upper_bound_x1 - lower_bound_x1\n",
+    "change_in_xtwo = upper_bound_x2 - lower_bound_x2\n",
+    "\n",
+    "print('PDF value at x=3.5 and x2=5.5: ',mgp_value_at_x1Lower_x2_lower)\n",
+    "print('PDF value at x=3.7 and x2=5.6: ',mgp_value_at_x1upper_x2_upper)\n",
+    "print('PDF value at x=3.5 and x2=5.6: ',mgp_value_at_x1lower_x2_upper)\n",
+    "print('PDF value at x=3.7 and x2=5.5: ',mgp_value_at_x1upper_x2_lower)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
