--- a/File2.ipynb
+++ b/File2.ipynb
@@ -502,6 +502,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To compute probabilities over this range we need to integrate the pdf function over the given range\n",
+    "# as not allowed to use external math library we need to impelement integration from scratch\n",
+    "# for which I am going to use Trapezoidal Rule to Approximate the porbability\n",
+    "def Integration_By_Trapezoidal(Lower_Bound,Upper_Bound,Mean,cov_mat,count):\n",
+    "    # First step calculate width of each trapezoid\n",
+    "    trap_width = (Upper_Bound - Lower_Bound) / count\n",
+    "    sum_of_area = (1/2) * (Multivariate_Gaussian_PDF([Lower_Bound,Mean[1]],Mean,cov_mat) + Multivariate_Gaussian_PDF([Upper_Bound,Mean[1]],Mean,cov_mat))\n",
+    "    \n",
+    "    # now we will run a loop for all sub intervals \n",
+    "    for interval in range(1,count):\n",
+    "        # for each interval we will calculate the area of trapezoid\n",
+    "        # and add it to sum_of_area\n",
+    "        # Lower bound over here is the start of the interval\n",
+    "        # interval * trap_width\n",
+    "        # here interval is the current index in loop\n",
+    "        # which goes uptil count - 1\n",
+    "        # trap_width is step size, which represents the distance between \n",
+    "        # consecutive points on the x-axis (the width of each trapezoid)\n",
+    "        # hence interval * trap_width moves you interval steps from the Lower Bound\n",
+    "        # spacing each point by trap width\n",
+    "        temp = Lower_Bound + interval * trap_width\n",
+    "        # then evaluating the Gaussian pdf value at temp point\n",
+    "        sum_of_area += Multivariate_Gaussian_PDF([temp,Mean[1]],Mean,cov_mat)\n",
+    "        # sum represents the height of trapezoids \n",
+    "        # (function values at different points along the x-axis).\n",
+    "        \n",
+    "    # Each trapezoid's area is calculated as height×width\n",
+    "    # as we got the height now we will multiply it with the trap width\n",
+    "    sum_of_area = sum_of_area * trap_width \n",
+    "    # now return the integrated function value\n",
+    "    return sum_of_area\n",
+    "\n",
+    "def Find_Probability_in_Interval(x1L, x1U, x2L, x2U, Mean_list,cov_mat):\n",
+    "    x1_probability = Integration_By_Trapezoidal(x1L, x1U,Mean_list,cov_mat,1000)\n",
+    "    x2_probability = Integration_By_Trapezoidal(x2L, x2U,Mean_list,cov_mat,1000)\n",
+    "    return x1_probability*x2_probability"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
