--- a/File2.ipynb
+++ b/File2.ipynb
@@ -546,6 +546,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(3.5 < x_1 < 3.7,5.5 < x_2 <5.6): 3.5996439978488728e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "Final_Probability = Find_Probability_in_Interval(3.5, 3.7, 5.5, 5.6, Mean_list,Covariance_Matrix)\n",
+    "print(f'P(3.5 < x_1 < 3.7,5.5 < x_2 <5.6): {Final_Probability}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
