--- a/File2.ipynb
+++ b/File2.ipynb
@@ -563,6 +563,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task5: Categorical Random Variables.\n",
+    "----------------\n",
+    "Lets categorize the petal length variable to four categories, i.e very short $\\in[1,1.6]$, short $\\in(1.6,4.4]$, long $\\in(4.4,5.1]$, very long $\\in(5.1,6.9]$ and model this varible using random variable $x$\n",
+    "\n",
+    "Find the probability of this cateogrical random variable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
