--- a/File2.ipynb
+++ b/File2.ipynb
@@ -575,6 +575,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(1.0<x<1.6) 0.28859060402684567\n",
+      "P(1.6<x<4.4) 0.2348993288590604\n",
+      "P(4.5<x<5.1) 0.2483221476510067\n",
+      "P(5.1<x<6.9) 0.22818791946308725\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write your code here\n",
+    "# Strategy is to first make ranges that are mentioned and then counting the number of sample \n",
+    "# Falling in that range divided by the total length of the samples in the domain\n",
+    "pl_range_from_one_to_15 = []\n",
+    "pl_range_from_16_to_43 = []\n",
+    "pl_range_from_44_to_50 = []\n",
+    "pl_range_from_51_to_68 = []\n",
+    "\n",
+    "for value in datalist[0]:\n",
+    "    \n",
+    "    # case 1\n",
+    "    if value>=1 and value<=1.6:\n",
+    "        pl_range_from_one_to_15.append(value)\n",
+    "\n",
+    "    # case 2\n",
+    "    if value>1.6 and value<=4.4:\n",
+    "        pl_range_from_16_to_43.append(value)\n",
+    "    \n",
+    "    # case 3\n",
+    "    if value>=4.5 and value<=5.1:\n",
+    "        pl_range_from_44_to_50.append(value)\n",
+    "    \n",
+    "    # case 4\n",
+    "    if value>5.1 and value<=6.9:\n",
+    "        pl_range_from_51_to_68.append(value)\n",
+    "\n",
+    "Prob_pl_range_from_one_to_15 = len(pl_range_from_one_to_15) / len(datalist[0])\n",
+    "Prob_pl_range_from_16_to_43 = len(pl_range_from_16_to_43) / len(datalist[0])\n",
+    "Prob_pl_range_from_44_to_50 = len(pl_range_from_44_to_50) / len(datalist[0])\n",
+    "Prob_pl_range_from_51_to_68 = len(pl_range_from_51_to_68) / len(datalist[0])\n",
+    "\n",
+    "print('P(1.0<x<1.6)',Prob_pl_range_from_one_to_15)\n",
+    "print('P(1.6<x<4.4)',Prob_pl_range_from_16_to_43)\n",
+    "print('P(4.5<x<5.1)',Prob_pl_range_from_44_to_50)\n",
+    "print('P(5.1<x<6.9)',Prob_pl_range_from_51_to_68)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
