--- a/File2.ipynb
+++ b/File2.ipynb
@@ -631,6 +631,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(Very Short):  0.28859060402684567\n",
+      "P(Short):  0.2348993288590604\n",
+      "P(Long):  0.2483221476510067\n",
+      "P(Very Long):  0.22818791946308725\n"
+     ]
+    }
+   ],
+   "source": [
+    "categorization = {\n",
+    "    'Very Short': 0,\n",
+    "    'Short': 0,\n",
+    "    'Long': 0,\n",
+    "    'Very Long': 0\n",
+    "}\n",
+    "\n",
+    "def Determine_Category_of_Petal_length(value):\n",
+    "        # case 1\n",
+    "    if value>=1 and value<=1.6:\n",
+    "        return 'Very Short'\n",
+    "\n",
+    "    # case 2\n",
+    "    if value>1.6 and value<=4.4:\n",
+    "        return 'Short'\n",
+    "    \n",
+    "    # case 3\n",
+    "    if value>=4.5 and value<=5.1:\n",
+    "        return 'Long'\n",
+    "    \n",
+    "    # case 4\n",
+    "    if value>5.1 and value<=6.9:\n",
+    "        return 'Very Long'\n",
+    "    \n",
+    "    else:\n",
+    "        return 'Not Found'\n",
+    "\n",
+    "for pls in datalist[0]:\n",
+    "    extracted_category = Determine_Category_of_Petal_length(pls)\n",
+    "    if extracted_category != 'Not Found':\n",
+    "        categorization[extracted_category] += 1 #incrementing the count of that specific cateogry\n",
+    "        \n",
+    "print('P(Very Short): ',categorization['Very Short']/len(datalist[0]))\n",
+    "print('P(Short): ',categorization['Short']/len(datalist[0]))\n",
+    "print('P(Long): ',categorization['Long']/len(datalist[0]))\n",
+    "print('P(Very Long): ',categorization['Very Long']/len(datalist[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
