--- a/File2.ipynb
+++ b/File2.ipynb
@@ -686,6 +686,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Prob_VeryShort = categorization['Very Short']/len(datalist[0])\n",
+    "Prob_Short = categorization['Short']/len(datalist[0])\n",
+    "Prob_Long = categorization['Long']/len(datalist[0])\n",
+    "Prob_VeryLong = categorization['Very Long']/len(datalist[0])                                          "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
