--- a/File2.ipynb
+++ b/File2.ipynb
@@ -697,6 +697,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task6: Categorical Random Variables.\n",
+    "Find the mean and covariance matrix of categorical variable $x$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of Categorical Data Petal Length:  2.4161073825503356\n",
+      "Covariance of Categorical Data Petal Length:  [[1.2851442046072894]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Write your code here\n",
+    "convert_categories_to_numeric_val = {\n",
+    "    # first category\n",
+    "    'Very Short': 1,\n",
+    "    # second category\n",
+    "    'Short': 2,\n",
+    "    # third category\n",
+    "    'Long': 3,\n",
+    "    # fourth category\n",
+    "    'Very Long' : 4\n",
+    "}\n",
+    "categorised_petal_lengths = []\n",
+    "for petal_l in datalist[0]:\n",
+    "    categ = Determine_Category_of_Petal_length(petal_l)\n",
+    "    numeric_val = convert_categories_to_numeric_val[categ]\n",
+    "    categorised_petal_lengths.append(numeric_val)\n",
+    "\n",
+    "\n",
+    "Mean_of_categorical_petal_lengths = compute_mean(categorised_petal_lengths)\n",
+    "Variance_of_categorical_petal_lengths = Calc_Variance(categorised_petal_lengths,Mean_of_categorical_petal_lengths)\n",
+    "covraince_of_categorical_petal_lengths = [[Variance_of_categorical_petal_lengths]]\n",
+    "print('Mean of Categorical Data Petal Length: ',Mean_of_categorical_petal_lengths)\n",
+    "print('Covariance of Categorical Data Petal Length: ',covraince_of_categorical_petal_lengths)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
