--- a/File2.ipynb
+++ b/File2.ipynb
@@ -755,6 +755,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Calc_Factorial(value):\n",
+    "    if value == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        factorial = 1\n",
+    "        for i in range(1, value + 1): \n",
+    "            factorial *= i \n",
+    "        return factorial\n",
+    "\n",
+    "def Raised_to_power(value,power):\n",
+    "    return value ** power"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
