--- a/File2.ipynb
+++ b/File2.ipynb
@@ -801,6 +801,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task8: Bivariate Categorical Random Variables.\n",
+    "----------------\n",
+    "Lets also categorize the petal width variable to three categories, i.e short $\\in[0.1,1.0]$, medium  $\\in(1.0,1.75)$, long $\\in(1.75,2.5]$.\n",
+    "\n",
+    "Now lets model both the petal length and width as bivariate categorical random variable $X$.\n",
+    "Find the probability for following cases.\n",
+    "\n",
+    "$$p(x_1=[1000], x_2=[000])$$\n",
+    "$$p(x_1=[1000], x_2=[001])$$\n",
+    "\n",
+    "$$p(x_1=[0010], x_2=[010])$$\n",
+    "$$p(x_1=[0001], x_2=[100])$$\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
