--- a/File2.ipynb
+++ b/File2.ipynb
@@ -820,10 +820,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Write your code here\n",
+    "\n",
+    "categ_n_index = {\n",
+    "    'Very Short': 0,\n",
+    "    # second category\n",
+    "    'Short': 1,\n",
+    "    # third category\n",
+    "    'Long': 2,\n",
+    "    # fourth category\n",
+    "    'Very Long' : 3\n",
+    "    \n",
+    "}\n",
+    "petal_length_categorised_list = []\n",
+    "for pl in datalist[0]:\n",
+    "    temp_list = [0] * 4\n",
+    "    # har petal length k leyay aik list banaye ga [0000] and \n",
+    "    # jis range se wu petal length belong karay gi\n",
+    "    # us index ko 1 karega\n",
+    "    categ = Determine_Category_of_Petal_length(pl)\n",
+    "    get_index = categ_n_index[categ]\n",
+    "    temp_list[get_index] = 1\n",
+    "    petal_length_categorised_list.append(temp_list)\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
