--- a/File2.ipynb
+++ b/File2.ipynb
@@ -851,10 +851,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [0, 0, 1], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 1, 0], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 1, 0], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 1, 0], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 1, 0], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 1, 0], [0, 1, 0], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1], [0, 0, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now doing the same thing with Petal Widths\n",
+    "def Determine_Category_of_Petal_Width(value):\n",
+    "    # case 1\n",
+    "    if value>=0.1 and value<=1.0:\n",
+    "        return 'Short'\n",
+    "\n",
+    "    # case 2\n",
+    "    if value>1.0 and value<1.75:\n",
+    "        return 'Medium'\n",
+    "    \n",
+    "    # case 3\n",
+    "    if value>1.75 and value<=2.5:\n",
+    "        return 'Long'\n",
+    "\n",
+    "    else:\n",
+    "        return 'Not Found'\n",
+    "    \n",
+    "\n",
+    "categ_n_index2 = {\n",
+    "    'Short': 0,\n",
+    "    'Medium':1,\n",
+    "    'Long': 2, \n",
+    "}\n",
+    "\n",
+    "petal_width_categorised_list = []\n",
+    "for pw in datalist[1]:\n",
+    "    temp_list2 = [0] * 3\n",
+    "    # har petal Width k leyay aik list banaye ga [0000] and \n",
+    "    # jis range se wu petal width belong karay gi\n",
+    "    # us index ko 1 karega\n",
+    "    categ2 = Determine_Category_of_Petal_Width(pw)\n",
+    "    get_index2 = categ_n_index2[categ2]\n",
+    "    temp_list2[get_index2] = 1\n",
+    "    petal_width_categorised_list.append(temp_list2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(petal_width_categorised_list)"
+   ]
   },
   {
    "cell_type": "code",
