--- a/File2.ipynb
+++ b/File2.ipynb
@@ -905,10 +905,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique Categories of Petal Length:  [[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1]]\n",
+      "Unique Categories of Petal Width:  [[1, 0, 0], [0, 1, 0], [0, 0, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keep a count of each category pair that could be possibly made\n",
+    "# make a list of unique categories from petal_length_categorised_list\n",
+    "\n",
+    "unique_pl = []\n",
+    "\n",
+    "for i in petal_length_categorised_list:\n",
+    "    if i not in unique_pl:\n",
+    "        unique_pl.append(i)\n",
+    "\n",
+    "unique_pw = []\n",
+    "for i in petal_width_categorised_list:\n",
+    "    if i not in unique_pw:\n",
+    "        unique_pw.append(i)\n",
+    "    \n",
+    "print('Unique Categories of Petal Length: ',unique_pl)    \n",
+    "print('Unique Categories of Petal Width: ',unique_pw)"
+   ]
   },
   {
    "cell_type": "code",
