--- a/File2.ipynb
+++ b/File2.ipynb
@@ -938,6 +938,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# now making a match and counting\n",
+    "categories_matched_pair = {}\n",
+    "count = 0\n",
+    "for i in unique_pl:\n",
+    "    for j in unique_pw:\n",
+    "        temp = str(i) + str(j)\n",
+    "        categories_matched_pair[temp] = 1\n",
+    "        count +=1\n",
+    "\n",
+    "\n",
+    "print(count) # this gives us 12 means total samples that we are having of each cateogry is 12\n",
+    "# categories_matched_pair\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
