--- a/File2.ipynb
+++ b/File2.ipynb
@@ -965,6 +965,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding Probability for $$p(x_1=[1000], x_2=[000])$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
